--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
       "express": "^4.17.0",
       "knex": "^0.21.1",
       "moment": "^2.29.1",
-      "mysql": "^2.18.1"
-   },
-   "devDependencies": {
+      "mysql": "^2.18.1",
       "@types/cors": "^2.8.8",
       "@types/express": "4.17.0",
       "@types/knex": "^0.16.1",
